# markdownwiki

./: .gitignore  LICENSE  README.md  create-deb.sh  do_release.sh  file_navigator.py  main.py  markdownwiki.spec  pyproject.toml  pysidedeploy.spec
.github/workflows/: build.yml
assets/: resources.py
packaging/linux/: markdownwiki.desktop
widgets/: editor.py  file_navigator.py  renderer.py
