[project]
name = "markdown-wiki"
version = "0.0.1"
description = "Desktop Application for editing Markdown based Wikis."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.8",
    "pyside6==6.9.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pip>=25.1.1",
    "ruff>=0.11.10",
]

[tool.pyside6-project]
files = ["main.py"]
