[project]
name = "markdownwiki"
version = "0.2.4"
description = "Desktop Application for editing Markdown based Wikis."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.8",
    "pygments>=2.19.1",
    "pyside6==6.9.0",
    "superqt>=0.7.5",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pip>=25.1.1",
    "ruff>=0.11.10",
    "tomlkit>=0.13.3",
]

[tool.pyside6-project]
files = ["main.py"]
